# compiladores

./: .gitignore
Etapa-1/: .gitignore  Makefile  runTests.sh  scanner.l  testInput.sh
Etapa-2/: Makefile  parser.y  runTests.sh  scanner.l
Etapa-3/: Makefile  Specifications.md  abstract_syntax_tree.c  abstract_syntax_tree.h  aslTests.js  lexical_structures.c  lexical_structures.h  main.c  memTests.js  parser.y  runMemTests.js  runSpecialTests.js  runSyntacticTests.sh  scanner.l
Etapa-3/Tests E2/: asl163  asl164  asl167  asl63
Etapa-4/: Cargo.toml  Makefile  aslTests.js  build.rs  runMemTests.js  runSpecialTests.js  runSyntaxTests.py  semanticTests.js
Etapa-4/TestsE4/: errors.h  kal60
Etapa-4/src/: abstract_syntax_tree.rs  ast_node.rs  auxiliary_lexical_structures.rs  auxiliary_structures.rs  error.rs  lexical_structures.rs  main.rs  parser.y  scanner.l  semantic_structures.rs  syntactic_structures.rs
Etapa-5/: Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json  runSyntaxTests.py  runSynthesisTest.js  runSynthesisTests.js  runSynthesisTests.ts  runTest.ts  tsconfig.json
Etapa-5/TestsE4/: abc01  kal04  kal05  kal10  kal14  kal55  kal60  kal61  mao08
Etapa-5/src/: abstract_syntax_tree.rs  ast_node.rs  auxiliary_lexical_structures.rs  error.rs  instructions.rs  lexical_structures.rs  main.rs  parser.y  semantic_structures.rs
